test-suite/invalid/citation-invalid-quality.glx
# Invalid: Quality rating out of range (must be 0-3)
citations:
  citation-12345678:
    version: "1.0"
    source_id: source-abc12345
    quality: 5
